corrected-right-container-gap

--- a/frontend/css/home.css
+++ b/frontend/css/home.css
@@ -1006,7 +1006,7 @@ gap: 6px;
 }
 #on-off-right { 
     position: relative;
-    left: 378px;
+    left: 360px;
     bottom: 50px;
     display: flex;
     border: 1px solid #384256;;
